Fixed formatting for navbar on smaller mobile screens

--- a/ElliptiKeys/src/app/footer/footer.component.css
+++ b/ElliptiKeys/src/app/footer/footer.component.css
@@ -7,6 +7,7 @@ footer
 footer a
 {
     color: white;
+    margin: 10px;
 }
 
 @media screen and (max-width:600px)
